by default display the content from sessionStorage

--- a/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
+++ b/07-firebase/01-Activities/05-signin-sessionstorage/5-student-do-signin-session-storage.html
@@ -117,6 +117,7 @@
     $("#name-display").text(sessionStorage.getItem("name"));
     $("#email-display").text(sessionStorage.getItem("email"));
     $("#age-display").text(sessionStorage.getItem("age"));
+    $("#comment-display").text(sessionStorage.getItem("comment"));
 
 
     
