grab the user name

--- a/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
+++ b/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
@@ -53,6 +53,7 @@
       $("#greeting").empty();
 
       // Grab the User Input
+      var username = $("#your-name").val().trim();
 
       // Clear the previous cookie by setting it it equal to nothing and its expiration date to a past time
 
