--- a/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
+++ b/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
@@ -56,10 +56,14 @@
       var username = $("#your-name").val().trim();
 
       // Clear the previous cookie by setting it it equal to nothing and its expiration date to a past time
+      document.cookie = "name=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
 
       // Store the username as a cookie using "document.cookie"
+      document.cookie = "name=" + username + ";";
 
       // Print all the cookies
+      console.log(username);
+      console.log(document.cookie);
 
       // Recover the name by passing the cookie list through a function that breaks it down
 
