print all cookies

--- a/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
+++ b/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
@@ -66,6 +66,8 @@
       console.log(document.cookie);
 
       // Recover the name by passing the cookie list through a function that breaks it down
+      var cookieName = readCookie("name");
+      console.log(cookieName);
 
       // Display the recovered name
     });
