by default upon load recover the last cookie

--- a/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
+++ b/07-firebase/01-Activities/06-cookies-demo/6-instructor-do-cookies-intro.html
@@ -70,9 +70,14 @@
       console.log(cookieName);
 
       // Display the recovered name
+      $("#greeting").text(cookieName);
+
     });
 
     // By default (upon load) recover the last cookie
+    var cookieName = readCookie("name");
+    $("#greeting").text(cookieName);
+
   </script>
 
 </body>
