added 8-todolist-localstorage html

--- a/07-firebase/01-Activities/08-todolist-localstorage/8-student-do-todolist-localstorage.html
+++ b/07-firebase/01-Activities/08-todolist-localstorage/8-student-do-todolist-localstorage.html
@@ -74,6 +74,11 @@
       $("input[type='text']").val("");
 
       // Adding our new todo to our local list variable and adding it to local storage
+      list.push(val);
+      localStorage.setItem("todolist", JSON.stringify(list));
+
+      putOnPage();
+
     });
   </script>
 </body>
