change html associated with the number

--- a/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
+++ b/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
@@ -77,6 +77,8 @@
 console.log(snapshot.val());
 
 // Then we change the html associated with the number.
+$("#click-value").text(snapshot.val().clickCount);
+
 
 // Then update the clickCounter variable with data from the database.
 
