update clickCounter variable with data from the database

--- a/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
+++ b/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
@@ -81,6 +81,8 @@ $("#click-value").text(snapshot.val().clickCount);
 
 
 // Then update the clickCounter variable with data from the database.
+clickCounter = snapshot.val().clickCount;
+
 
 // If there is an error that Firebase runs into -- it will be stored in the "errorObject"
 // Again we could have named errorObject anything we wanted.
