--- a/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
+++ b/07-firebase/01-Activities/09-clickbutton/instructor-do-clickbutton-fireconsole.html
@@ -91,6 +91,7 @@ clickCounter = snapshot.val().clickCount;
 }, function(errorObject) {
 
 // In case of error this will print the error
+console.log("The read failed: " + errorObject.code);
 
 
 });
