instructor-do-more-properties html

--- a/07-firebase/01-Activities/12-moreproperties/instructor-do-more-properties.html
+++ b/07-firebase/01-Activities/12-moreproperties/instructor-do-more-properties.html
@@ -82,6 +82,7 @@
 
       // Log the value of the various properties
     
+      console.log(snapshot.val().name);
 
       // Change the HTML
       $("#displayed-data").text(snapshot.val().name + " | " + snapshot.val().age + " | " + snapshot.val().phone);
