instructor-do-more-properties html

--- a/07-firebase/01-Activities/12-moreproperties/instructor-do-more-properties.html
+++ b/07-firebase/01-Activities/12-moreproperties/instructor-do-more-properties.html
@@ -84,6 +84,8 @@
     
       console.log(snapshot.val().name);
       console.log(snapshot.val().age);
+      console.log(snapshot.val().phone);
+
 
 
       // Change the HTML
