--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -86,7 +86,12 @@
 
     // Initialize Firebase
 
-
+    var config = {
+      apiKey: "AIzaSyA5eYKsB8T2q6rMGdKSvac6eQsWTzsZEjE",
+      authDomain: "fir-recent-user.firebaseapp.com",
+      databaseURL: "https://fir-recent-user.firebaseio.com",
+      storageBucket: "fir-recent-user.appspot.com"
+    };
     // Create a variable to reference the database
 
 
