--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -98,6 +98,11 @@
     // Create a variable to reference the database
     var database = firebase.database();
 
+    // Initial Values
+    var name = "";
+    var email = "";
+    var age = 0;
+    var comment = "";
 
     // Capture Button Click
     $("#add-user").on("click", function(event) {
