--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -114,6 +114,9 @@
       // Code in the logic for storing and retrieving the most recent user.
 
       // Don't forget to provide initial data to your Firebase database.
+      name = $("#name-input").val().trim();
+      email = $("#email-input").val().trim();
+
 
     });
 
