storing age and comment

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -116,6 +116,9 @@
       // Don't forget to provide initial data to your Firebase database.
       name = $("#name-input").val().trim();
       email = $("#email-input").val().trim();
+      age = $("#age-input").val().trim();
+      comment = $("#comment-input").val().trim();
+
 
 
     });
