provide initial data to firebase database

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -119,6 +119,13 @@
       age = $("#age-input").val().trim();
       comment = $("#comment-input").val().trim();
 
+      database.ref().set({
+        name: name,
+        email: email,
+        age: age,
+        comment: comment
+      });
+
 
 
     });
