--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -132,7 +132,17 @@
 
 
     // Firebase watcher + initial loader HINT: .on("value")
+    database.ref().on("value", function(snapshot) {
 
+// Log everything that's coming out of snapshot
+
+
+// Change the HTML to reflect
+
+// Handle the errors
+}, function(errorObject) {
+console.log("Errors handled: " + errorObject.code);
+});
 
     // Create Error Handling
   </script>
