--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -135,6 +135,8 @@
     database.ref().on("value", function(snapshot) {
 
 // Log everything that's coming out of snapshot
+console.log(snapshot.val());
+      console.log(snapshot.val().name);
 
 
 // Change the HTML to reflect
