log everything that's coming out f snapshot

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -137,6 +137,9 @@
 // Log everything that's coming out of snapshot
 console.log(snapshot.val());
       console.log(snapshot.val().name);
+      console.log(snapshot.val().email);
+      console.log(snapshot.val().age);
+
 
 
 // Change the HTML to reflect
