change the html to reflect

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -139,10 +139,14 @@ console.log(snapshot.val());
       console.log(snapshot.val().name);
       console.log(snapshot.val().email);
       console.log(snapshot.val().age);
+      console.log(snapshot.val().comment);
+
 
 
 
 // Change the HTML to reflect
+$("#name-display").text(snapshot.val().name);
+
 
 // Handle the errors
 }, function(errorObject) {
