change the html to reflect

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -146,6 +146,8 @@ console.log(snapshot.val());
 
 // Change the HTML to reflect
 $("#name-display").text(snapshot.val().name);
+$("#email-display").text(snapshot.val().email);
+
 
 
 // Handle the errors
