change the html to reflect

--- a/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
+++ b/07-firebase/01-Activities/13-mostrecentuser/recentuser.html
@@ -147,6 +147,9 @@ console.log(snapshot.val());
 // Change the HTML to reflect
 $("#name-display").text(snapshot.val().name);
 $("#email-display").text(snapshot.val().email);
+$("#age-display").text(snapshot.val().age);
+      $("#comment-display").text(snapshot.val().comment);
+
 
 
 
